[gd_scene load_steps=88 format=3 uid="uid://s0shuc50m6uf"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_h246c"]
[ext_resource type="Texture2D" uid="uid://d1u4neos6j6at" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V1/Player Idle/Player Idle 48x48.png" id="1_wmuej"]
[ext_resource type="Texture2D" uid="uid://0g5sbld5lnpk" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V1/Player Jump/player new jump 48x48.png" id="2_hwssu"]
[ext_resource type="Texture2D" uid="uid://b8teb8asnomop" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V2/Crouch-Idle/Player Crouch-Idle 48x48.png" id="2_k7ivg"]
[ext_resource type="Texture2D" uid="uid://dpoyqflen6ar8" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V1/Player Run/player run 48x48.png" id="3_6ygq3"]
[ext_resource type="Texture2D" uid="uid://txlvx62ko2i" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V2/Crouch-Walk/player crouch-walk 48x48.png" id="3_p2hvc"]
[ext_resource type="Texture2D" uid="uid://b6isvlrd8o3a5" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V1/Player Land/player land 48x48.png" id="3_srqym"]
[ext_resource type="Texture2D" uid="uid://dgjbonxqtbyex" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V2/Air Spin/player air spin 48x48.png" id="4_3s1y4"]
[ext_resource type="Texture2D" uid="uid://cyjrmqy2n6a43" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V5/Dash/dash.png" id="4_rn3no"]
[ext_resource type="Texture2D" uid="uid://cmtin77px4vbl" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V1/Player Wall Slide/player wall slide 48x48.png" id="8_xrrpa"]
[ext_resource type="Shape2D" uid="uid://juxewl7jags0" path="res://cshapes/plater_stand_cshape.tres" id="9_720mu"]
[ext_resource type="Texture2D" uid="uid://bx5mpg7bnkdqa" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V3/Player Hurt-Damaged/Player Hurt 48x48.png" id="9_nad8l"]
[ext_resource type="Texture2D" uid="uid://lsuy70n7r0cj" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V3/Player Death/Player Death 64x64.png" id="10_xbkkd"]
[ext_resource type="Texture2D" uid="uid://drglh4hlc8pk7" path="res://art/Asset Packs 1-5/Asset Packs 1-5/Asset Pack-V2/Player Roll/Player Roll 48x48.png" id="11_ltf66"]
[ext_resource type="Texture2D" uid="uid://lrvfcmwefkpp" path="res://art/particle.png" id="15_2elvy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_um3vy"]
atlas = ExtResource("2_k7ivg")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8y5su"]
atlas = ExtResource("2_k7ivg")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7h1b6"]
atlas = ExtResource("2_k7ivg")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_s100f"]
atlas = ExtResource("2_k7ivg")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mwvw"]
atlas = ExtResource("2_k7ivg")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dykx3"]
atlas = ExtResource("2_k7ivg")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm3vl"]
atlas = ExtResource("2_k7ivg")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5khpo"]
atlas = ExtResource("2_k7ivg")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvnv1"]
atlas = ExtResource("2_k7ivg")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_83wsm"]
atlas = ExtResource("2_k7ivg")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wyhc"]
atlas = ExtResource("3_p2hvc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrbsy"]
atlas = ExtResource("3_p2hvc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyndl"]
atlas = ExtResource("3_p2hvc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqlg8"]
atlas = ExtResource("3_p2hvc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_i38go"]
atlas = ExtResource("3_p2hvc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3o5s"]
atlas = ExtResource("3_p2hvc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_eae0k"]
atlas = ExtResource("3_p2hvc")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdqy3"]
atlas = ExtResource("3_p2hvc")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j841f"]
atlas = ExtResource("3_p2hvc")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_57blp"]
atlas = ExtResource("3_p2hvc")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvnnw"]
atlas = ExtResource("4_rn3no")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1x13"]
atlas = ExtResource("4_rn3no")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyn8i"]
atlas = ExtResource("4_rn3no")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2thew"]
atlas = ExtResource("4_rn3no")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq2wu"]
atlas = ExtResource("4_rn3no")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8si87"]
atlas = ExtResource("4_rn3no")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hiub"]
atlas = ExtResource("4_rn3no")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssyeu"]
atlas = ExtResource("4_rn3no")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8j6m"]
atlas = ExtResource("4_rn3no")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3i38"]
atlas = ExtResource("1_wmuej")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7akwa"]
atlas = ExtResource("1_wmuej")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2pt3p"]
atlas = ExtResource("1_wmuej")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_joi7a"]
atlas = ExtResource("1_wmuej")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8yav"]
atlas = ExtResource("1_wmuej")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfvy3"]
atlas = ExtResource("1_wmuej")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo782"]
atlas = ExtResource("1_wmuej")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l2gr"]
atlas = ExtResource("1_wmuej")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb4iw"]
atlas = ExtResource("1_wmuej")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_biurr"]
atlas = ExtResource("1_wmuej")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2suk"]
atlas = ExtResource("2_hwssu")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ytl6"]
atlas = ExtResource("2_hwssu")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_132x3"]
atlas = ExtResource("2_hwssu")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc1hv"]
atlas = ExtResource("2_hwssu")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wound"]
atlas = ExtResource("2_hwssu")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcmaj"]
atlas = ExtResource("2_hwssu")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpv8x"]
atlas = ExtResource("4_3s1y4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7oyc"]
atlas = ExtResource("4_3s1y4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yiaj7"]
atlas = ExtResource("4_3s1y4")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sblc4"]
atlas = ExtResource("4_3s1y4")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_khu7m"]
atlas = ExtResource("4_3s1y4")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5cq0"]
atlas = ExtResource("4_3s1y4")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7385"]
atlas = ExtResource("3_srqym")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iid7"]
atlas = ExtResource("3_srqym")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_clt2t"]
atlas = ExtResource("9_nad8l")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0452"]
atlas = ExtResource("9_nad8l")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2esf"]
atlas = ExtResource("3_6ygq3")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1vum"]
atlas = ExtResource("3_6ygq3")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgvvh"]
atlas = ExtResource("3_6ygq3")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn8l7"]
atlas = ExtResource("3_6ygq3")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrcdh"]
atlas = ExtResource("3_6ygq3")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_882i6"]
atlas = ExtResource("3_6ygq3")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qykvh"]
atlas = ExtResource("3_6ygq3")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbyvd"]
atlas = ExtResource("3_6ygq3")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjutg"]
atlas = ExtResource("10_xbkkd")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2p5v"]
atlas = ExtResource("11_ltf66")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hpmrb"]
atlas = ExtResource("11_ltf66")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i0as"]
atlas = ExtResource("10_xbkkd")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvdej"]
atlas = ExtResource("8_xrrpa")
region = Rect2(48, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_idbdt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_um3vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8y5su")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7h1b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s100f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mwvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dykx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm3vl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5khpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvnv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83wsm")
}],
"loop": true,
"name": &"crouch",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wyhc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrbsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyndl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqlg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i38go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3o5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eae0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdqy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j841f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57blp")
}],
"loop": true,
"name": &"crouch walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvnnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1x13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyn8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2thew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq2wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8si87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hiub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssyeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8j6m")
}],
"loop": false,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3i38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7akwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2pt3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_joi7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8yav")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfvy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo782")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l2gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb4iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_biurr")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2suk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ytl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_132x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc1hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wound")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcmaj")
}],
"loop": false,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpv8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7oyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yiaj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sblc4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khu7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5cq0")
}],
"loop": false,
"name": &"jump double",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7385")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iid7")
}],
"loop": false,
"name": &"jump end",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc1hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wound")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcmaj")
}],
"loop": false,
"name": &"mid air",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clt2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0452")
}],
"loop": true,
"name": &"new_animation",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2esf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1vum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgvvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn8l7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrcdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_882i6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qykvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbyvd")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjutg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2p5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hpmrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i0as")
}],
"loop": true,
"name": &"swim",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvdej")
}],
"loop": false,
"name": &"wall slide",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1kk7h"]
radius = 6.0

[sub_resource type="Gradient" id="Gradient_xq76a"]
colors = PackedColorArray(0, 0.894118, 0.843137, 1, 0.164706, 0.658824, 1, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_prh83"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 11.75
angle_min = -90.0
angle_max = 90.0
radial_velocity_min = 17.7
radial_velocity_max = 27.75
gravity = Vector3(0, -30, 0)
radial_accel_min = -2.23517e-06
radial_accel_max = -2.23517e-06
tangential_accel_min = -25.0
tangential_accel_max = 25.0
scale_min = 0.05
scale_max = 0.5
collision_mode = 1
collision_friction = 0.19
collision_bounce = 0.44
collision_use_scale = true

[node name="player" type="CharacterBody2D"]
collision_layer = 9
collision_mask = 9
script = ExtResource("1_h246c")
DASH_VELOCITY = 400.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_idbdt")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = ExtResource("9_720mu")
one_way_collision_margin = 0.0

[node name="CrouchRaycast_1" type="RayCast2D" parent="."]
visible = false
position = Vector2(-5, 3)
target_position = Vector2(0, -16)

[node name="CrouchRaycast_2" type="RayCast2D" parent="."]
visible = false
position = Vector2(6, 3)
target_position = Vector2(0, -16)

[node name="WallCheck_Right" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(16, 0)

[node name="WallCheck_Left" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(-16, 0)

[node name="dash_timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 0.8

[node name="Water check" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="WaterCollision" type="CollisionShape2D" parent="Water check"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_1kk7h")
debug_color = Color(0.250292, 0.62046, 0.398284, 0.42)

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 80
speed_scale = 2.81
emission_shape = 1
emission_sphere_radius = 10.98
gravity = Vector2(0, 0)
radial_accel_min = 12.76
radial_accel_max = 12.76
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(0.32549, 0.843137, 1, 1)
color_ramp = SubResource("Gradient_xq76a")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
emitting = false
amount = 80
process_material = SubResource("ParticleProcessMaterial_prh83")
texture = ExtResource("15_2elvy")
lifetime = 2.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="body_entered" from="Water check" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Water check" to="." method="_on_area_2d_body_exited"]
